--- a/docs/lesson_6.css
+++ b/docs/lesson_6.css
@@ -281,9 +281,9 @@ textarea {
   text-align: center;
   margin-right: 2%;
   overflow: hidden;
-  height: 500px;
+  height: 100%;
   background-image: url(./assets/images/airpods_large_2x.jpg);
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 50%;
@@ -301,26 +301,50 @@ textarea {
   width: 100%;
 }
 .container-accessories {
-  position: relative;
+  /* position: relative;
   text-align: center;
   margin-left: 2%;
+  overflow: hidden; */
+  position: relative;
+  text-align: center;
+  margin-right: 2%;
   overflow: hidden;
+  height: 100%;
+  background-image: url(./assets/images/accessories_large_2x.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 50%;
 }
 .container-airpods > .text-block {
-  /* position: absolute; */
-  position: static;
-  transform: unset;
-  margin: 12% auto;
+  position: absolute;
+  /* position: static; */
+  top: 50%;
+  left: 50%;
+  margin: 0;
   width: 80%;
   z-index: 1;
+  transform: translate(-50%, -50%);
 }
 
 .container-accessories > .text-block {
+  position: absolute;
+  /* position: static; */
+  top: 50%;
+  left: 50%;
+  margin: 0;
   width: 85%;
   z-index: 1;
+  transform: translate(-50%, -50%);
 }
 .full-screen-img {
   position: relative;
+  background-image: url(./assets/images/howtoshoot_large_2x.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 700px;
 }
 .full-screen-img img {
   width: 100%;
@@ -331,7 +355,7 @@ textarea {
 }
 .full-screen-img > .text-block {
   top: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
   color: #fff;
   z-index: 1;
 }
@@ -364,6 +388,22 @@ textarea {
   width: 100%;
   display: block;
   margin-bottom: 20px;
+}
+.page-container__paypal-img {
+  height: 350px;
+  width: 100%;
+  background-image: url(./assets/images/apple_pay_large_2x.jpg);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.page-container__icloud-img {
+  height: 327px;
+  width: 100%;
+  background-image: url(./assets/images/icloud_large_2x.jpg);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .page-container__iphonex-bgblock {
   height: 200px;
@@ -459,6 +499,30 @@ a.footer-nav-link {
     width: 100%;
     height: 400px;
     background-position: center;
+  }
+  .container-two-column {
+    flex-direction: column;
+  }
+  .container-airpods,
+  .container-accessories {
+    width: 95%;
+    margin: 0 auto;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    font-size: 2rem;
+  }
+  .container-airpods > .text-block h2,
+  .container-accessories > .text-block h2 {
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    font-size: 2rem;
+  }
+  .container-icloud,
+  .container-pay {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .page-container__paypal-img,
+  .page-container__icloud-img {
+    height: 200px;
   }
 }
 
