--- a/src/meet_7/meet_7.scss
+++ b/src/meet_7/meet_7.scss
@@ -33,7 +33,7 @@
     position: absolute;
     left: 0;
     top: 50px;
-    height: 100%;
+    height: 0;
     border: 2px solid black;
     width: 96%;
     padding: 2%;
@@ -41,8 +41,23 @@
     flex-direction: column;
     align-items: center;
     visibility: hidden;
+    transition: all 0.5s linear;
+    overflow: hidden;
   }
   &__option {
     cursor: pointer;
+    border-bottom: 1px solid grey;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+    &:hover {
+      background-color: rgb(190, 190, 190);
+    }
   }
 }
